# log4shell-scanner-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
src/: cli.rs  log4shell_scanner.rs  main.rs
