[package]
name = "log4shell-scanner-rs"
version = "0.1.3"
authors = ["Yann Nicolas"]
edition = "2021"
description = "Utility to scan files on the FileSystem and detect potential vulnerabilities to log4shell (CVE-2021-44228)."
readme = "README.md"
homepage = "https://github.com/yannart/log4shell-scanner-rs/"
repository = "https://github.com/yannart/log4shell-scanner-rs/"
license = "MIT"
keywords = ["cli", "log4j", "log4shell", "cve", "vulnerability"]
categories = ["Command line utilities", "Cybersecurity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
zip = "2.2"
memchr = "2.7"
log = "0.4"
env_logger = "0.11"
